# trading-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_page.py
src/trading_bot/: config.py  indicators.py
src/trading_bot/backtest/: engine.py  metrics.py  portfolio.py
src/trading_bot/broker/: __init__.py  alpaca_broker.py  base.py  schwab_broker.py
src/trading_bot/data/: __init__.py  alpaca.py
src/trading_bot/live/: runner.py
src/trading_bot/strategies/: base.py  ma_crossover.py  mean_reversion.py  pairs.py  rsi.py
tests/: conftest.py  test_backtest.py  test_broker.py  test_cli.py  test_data.py  test_indicators.py  test_live.py  test_metrics.py  test_portfolio.py  test_strategies.py  test_web.py
trading_bot/: cli.py
trading_bot/backtest/: engine.py
trading_bot/data/: base.py  yahoo.py
trading_bot/live/: __init__.py
trading_bot/strategies/: __init__.py  base.py  ma_crossover.py  mean_reversion.py  pairs.py  rsi.py
trading_bot/web/: app.py  lessons.json  page_template.html
trading_bot/web/static/: app.js  index.html  styles.css
