[project]
name = "trading-bot"
version = "0.1.0"
description = "Educational, math-first algorithmic day-trading lab for US stocks: backtesting, live data, and a concept-explaining web page."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Matthew Khoriaty" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "statsmodels>=0.14",       # ADF cointegration test + OLS hedge ratio
    "yfinance>=0.2.40",        # free long-range daily history (backtests only, never live)
    "alpaca-py>=0.33",         # broker + IEX market data (paper trading -> live)
    "fastapi>=0.110",          # educational web app
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
schwab = ["schwab-py>=1.5.0"]  # added only when migrating to real money on Schwab

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
